Update the cmakelist

--- a/cxx/dump/CMakeLists.txt
+++ b/cxx/dump/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(filter)
+project(dump)
 
 # Options
 set(CMAKE_BUILD_TYPE "Release")
@@ -12,17 +12,16 @@ include_directories(src)
 include_directories(../shared/)
 
 # Binaries
-add_executable(filter
+add_executable(dump
     ../shared/hmr_args.cpp
-    ../shared/hmr_bam.cpp
-    ../shared/hmr_bgzf.cpp
-    ../shared/hmr_fasta.cpp
+    ../shared/hmr_cgd_parse.cpp
+    ../shared/hmr_cluster.cpp
+    ../shared/hmr_reads_parse.cpp
+    ../shared/hmr_tour.cpp
     ../shared/hmr_ui.cpp
-    src/filter_bam.cpp
-    src/filter_enzyme.cpp
-    src/filter_fasta.cpp
     src/hmr_args_type.cpp
     src/main.cpp
-
+    src/optimize_direction.cpp
+    src/optimize_order.cpp
 )
-target_link_libraries(filter pthread deflate)
+target_link_libraries(dump pthread)
